Add dependency on sysctl of baseunix for all bsd OSes

--- a/rtl/dragonfly/Makefile.fpc
+++ b/rtl/dragonfly/Makefile.fpc
@@ -66,6 +66,7 @@ BSD_DEPS_OS=$(SYSCALLUNIT)$(PPUEXT)
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
 DYNLIBSINCDIR=$(UNIXINC)
 SYSCALL_DEPS_OS=sysnr.inc $(BSDPROCINC)/syscallh.inc
+BASEUNIX_DEPS_OS=$(SYSCTLUNIT)$(PPUEXT)
 
 SYSTEMUNIT=system
 loaders+=gprt0
